# bidibul

./: .gitignore  CMakeLists.txt  README.md
components/lvgl__lvgl/: Kconfig  lv_conf.h  lvgl.h
components/lvgl__lvgl/src/: lv_conf_internal.h
components/lvgl__lvgl/src/demos/: lv_demos.h
components/lvgl__lvgl/src/demos/benchmark/: lv_demo_benchmark.c
components/lvgl__lvgl/src/extra/widgets/meter/: lv_meter.c
components/lvgl__lvgl/src/widgets/: lv_textarea.c
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/LCD_Driver/: ST7701S.c  ST7701S.h
main/LVGL_Driver/: LVGL_Driver.h
main/LVGL_UI/: LVGL_Driver.h  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_theme_manager.c  ui_theme_manager.h  ui_themes.c  ui_themes.h
main/LVGL_UI/components/: ui_comp_hook.c
main/LVGL_UI/fonts/: fleches.c  ui_font_Arial.c  ui_font_Arial12.c  ui_font_Mabook.c
main/LVGL_UI/images/: ui_img_1488500524.c  ui_img_coque_png.c  ui_img_fleche_png.c
main/LVGL_UI/screens/: ui_modebaro.bak  ui_modebaro.c  ui_modeconfig.c  ui_modetemp.c  ui_modevent.c
