idf_component_register(
                        SRCS  "main.c" 
                              "EXIO/TCA9554PWR.c"
                              "LCD_Driver/ST7701S.c" 
                              "Touch_Driver/GT911.c"
                              "Touch_Driver/esp_lcd_touch/esp_lcd_touch.c" 
                              "LVGL_Driver/LVGL_Driver.c"
                              "I2C_Driver/I2C_Driver.c"
                              "PCF85063/PCF85063.c"
                              "QMI8658/QMI8658.c"
                              "SD_Card/SD_MMC.c"
                              "LVGL_UI/ui.c"
                              "LVGL_UI/ui_helpers.c"
                              "Wireless/Wireless.c"
                              "Buzzer/Buzzer.c"
                              "BAT_Driver/BAT_Driver.c"
                              "LVGL_UI/screens/ui_modevent.c"
                              "LVGL_UI/screens/ui_modetemp.c"
                              "LVGL_UI/screens/ui_modeconfig.c"
                              "LVGL_UI/screens/ui_modebaro.c"
                              "LVGL_UI/components/ui_comp_hook.c"
                              "LVGL_UI/ui_theme_manager.c"
                              "LVGL_UI/ui_themes.c"
                              "LVGL_UI/ui_events.c"
                              "LVGL_UI/fonts/ui_font_Arial.c"
                              "LVGL_UI/fonts/ui_font_Arial12.c"
                              "LVGL_UI/fonts/ui_font_Mabook.c"
                              "LVGL_UI/fonts/fleches.c"
                              "LVGL_UI/images/ui_img_coque_png.c"
                              "LVGL_UI/images/ui_img_fleche_png.c"
                              "LVGL_UI/images/ui_img_1488500524.c"
                              "cJSON/cJSON.c"
                              

                        INCLUDE_DIRS "./EXIO"
                                     "./LCD_Driver"
                                     "./Touch_Driver" 
                                     "./Touch_Driver/esp_lcd_touch"  
                                     "./LVGL_Driver"
                                     "./I2C_Driver"
                                     "./PCF85063"
                                     "./QMI8658"
                                     "./SD_Card"
                                     "./LVGL_UI"
                                     "./Wireless"
                                     "./Buzzer"
                                     "./BAT_Driver"
                                     "./LVGL_UI/screens"
                                     "./LVGL_UI/fonts"
                                     "./LVGL_UI/images"
                                     "./LVGL_UI/components"
                                     "../components/lvgl__lvgl"
                                     "./cJSON"
                                     "."   
                        )
